--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,44 @@ queryData.py
 output.csv
 app.log
 send_messages.log
+.VSCodeCounter/2024-02-02_18-01-16/details.md
+.VSCodeCounter/2024-02-02_18-01-16/diff-details.md
+.VSCodeCounter/2024-02-02_18-01-16/diff.csv
+.VSCodeCounter/2024-02-02_18-01-16/diff.md
+.VSCodeCounter/2024-02-02_18-01-16/diff.txt
+.VSCodeCounter/2024-02-02_18-01-16/results.csv
+.VSCodeCounter/2024-02-02_18-01-16/results.json
+.VSCodeCounter/2024-02-02_18-01-16/results.md
+.VSCodeCounter/2024-02-02_18-01-16/results.txt
+archive/ContractData_202402021455.csv
+archive/ContractData_202402021532.csv
+archive/ContractData_202402021534.csv
+archive/ContractData_202402021540.csv
+archive/ContractData_202402021542.csv
+archive/ContractData_202402021546.csv
+archive/ContractData_202402021550.csv
+__pycache__/config.cpython-310.pyc
+__pycache__/config.cpython-311.pyc
+__pycache__/data_processing_module.cpython-310.pyc
+__pycache__/data_processing_module.cpython-311.pyc
+__pycache__/file_operation_module.cpython-310.pyc
+__pycache__/file_operation_module.cpython-311.pyc
+__pycache__/log_config.cpython-310.pyc
+__pycache__/log_config.cpython-311.pyc
+__pycache__/notification_module.cpython-310.pyc
+__pycache__/notification_module.cpython-311.pyc
+__pycache__/request_module.cpython-310.pyc
+__pycache__/request_module.cpython-311.pyc
+monitor_log.txt
+technician_status_record.json
+archive/ContractData_202403211215.csv
+data_source/status_query.txt
+modules/__pycache__/config.cpython-311.pyc
+modules/__pycache__/data_processing_module.cpython-311.pyc
+modules/__pycache__/file_utils.cpython-311.pyc
+modules/__pycache__/log_config.cpython-311.pyc
+modules/__pycache__/notification_module.cpython-311.pyc
+modules/__pycache__/request_module.cpython-311.pyc
+ContractData.csv
+.gitignore
+PerformanceData.csv
