update local gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,19 @@ modules/__pycache__/request_module.cpython-311.pyc
 ContractData.csv
 .gitignore
 PerformanceData.csv
+__pycache__/jobs.cpython-311.pyc
+.VSCodeCounter/2024-03-21_15-32-49/details.md
+.VSCodeCounter/2024-03-21_15-32-49/diff-details.md
+.VSCodeCounter/2024-03-21_15-32-49/diff.csv
+.VSCodeCounter/2024-03-21_15-32-49/diff.md
+.VSCodeCounter/2024-03-21_15-32-49/diff.txt
+.VSCodeCounter/2024-03-21_15-32-49/results.csv
+.VSCodeCounter/2024-03-21_15-32-49/results.json
+.VSCodeCounter/2024-03-21_15-32-49/results.md
+.VSCodeCounter/2024-03-21_15-32-49/results.txt
+archive/state/ContractData_202403211248.csv
+archive/state/ContractData_202403211459.csv
+archive/state/ContractData_202403211514.csv
+logs/app.log.1
+modules/__pycache__/jobs.cpython-311.pyc
+state/send_status.json
