July campaign update.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,94 @@ archive/state/ContractData_202403211514.csv
 logs/app.log.1
 modules/__pycache__/jobs.cpython-311.pyc
 state/send_status.json
+archive/state/ContractData_202403211838.csv
+archive/state/ContractData_202403211841.csv
+archive/state/ContractData_202403211842.csv
+archive/state/ContractData_202403211843.csv
+archive/state/ContractData_202403211844.csv
+archive/state/ContractData_202403211846.csv
+archive/state/ContractData_202403211847.csv
+archive/state/ContractData_202403211848.csv
+archive/state/ContractData_202403211849.csv
+.VSCodeCounter/2024-04-01_14-19-24/details.md
+.VSCodeCounter/2024-04-01_14-19-24/diff-details.md
+.VSCodeCounter/2024-04-01_14-19-24/diff.csv
+.VSCodeCounter/2024-04-01_14-19-24/diff.md
+.VSCodeCounter/2024-04-01_14-19-24/diff.txt
+.VSCodeCounter/2024-04-01_14-19-24/results.csv
+.VSCodeCounter/2024-04-01_14-19-24/results.json
+.VSCodeCounter/2024-04-01_14-19-24/results.md
+.VSCodeCounter/2024-04-01_14-19-24/results.txt
+.gitignore
+.gitignore
+archive/state/ContractData_202404011000.csv
+archive/state/ContractData-SHANGHAI_202404031517.csv
+archive/state/ContractData-SHANGHAI_202404031621.csv
+archive/state/ContractData-SHANGHAI_202404031622.csv
+archive/state/ContractData-SHANGHAI_202404031636.csv
+archive/state/ContractData-SHANGHAI_202404031641.csv
+archive/state/ContractData-SHANGHAI_202404031645.csv
+archive/state/ContractData-SHANGHAI_202404031649.csv
+archive/state/ContractData-SHANGHAI_202404031722.csv
+archive/state/ContractData-SHANGHAI_202404031728.csv
+archive/state/ContractData-SHANGHAI_202404031730.csv
+archive/state/ContractData-SHANGHAI_202404031731.csv
+archive/state/ContractData-SHANGHAI_202404031736.csv
+archive/state/ContractData-SHANGHAI_202404031744.csv
+archive/state/ContractData-SHANGHAI_202404031811.csv
+archive/state/ContractData-SHANGHAI_202404031819.csv
+archive/state/ContractData-SHANGHAI_202404031822.csv
+state/PerformanceData-SHANGHAI.csv
+state/send_status_shanghai.json
+archive/state/ContractData-SHANGHAI_202404081130.csv
+archive/state/ContractData-SHANGHAI_202404081454.csv
+archive/state/ContractData-SHANGHAI_202404081458.csv
+archive/state/ContractData-SHANGHAI_202404101159.csv
+archive/state/ContractData-SHANGHAI_202404101203.csv
+archive/state/ContractData-SHANGHAI_202404101204.csv
+archive/state/ContractData-SHANGHAI_202404101214.csv
+archive/state/ContractData-SHANGHAI_202404101232.csv
+archive/state/ContractData-SHANGHAI_202404101252.csv
+archive/state/ContractData-SHANGHAI_202404101253.csv
+archive/state/ContractData-SHANGHAI_202404101256.csv
+archive/state/ContractData-SHANGHAI_202404101304.csv
+archive/state/ContractData-SHANGHAI_202404101305.csv
+archive/state/ContractData-SHANGHAI_202404101323.csv
+archive/state/ContractData-SHANGHAI_202404101419.csv
+archive/state/ContractData-SHANGHAI_202404111140.csv
+archive/state/ContractData-SHANGHAI_202404111142.csv
+archive/state/ContractData-SHANGHAI_202404171349.csv
+.VSCodeCounter/2024-04-28_11-03-02/details.md
+.VSCodeCounter/2024-04-28_11-03-02/diff-details.md
+.VSCodeCounter/2024-04-28_11-03-02/diff.csv
+.VSCodeCounter/2024-04-28_11-03-02/diff.md
+.VSCodeCounter/2024-04-28_11-03-02/diff.txt
+.VSCodeCounter/2024-04-28_11-03-02/results.csv
+.VSCodeCounter/2024-04-28_11-03-02/results.json
+.VSCodeCounter/2024-04-28_11-03-02/results.md
+.VSCodeCounter/2024-04-28_11-03-02/results.txt
+archive/state/ContractData-BJ-May_202404281045.csv
+state/PerformanceData-BJ-May.csv
+state/send_status_bj_may.json
+archive/state/ContractData-BJ-May_202404281806.csv
+archive/state/ContractData-BJ-May_202404291240.csv
+archive/state/ContractData-SH-May_202404281818.csv
+archive/state/ContractData-SH-May_202404281836.csv
+archive/state/ContractData-SH-May_202404281839.csv
+archive/state/ContractData-SH-May_202404281855.csv
+archive/state/ContractData-SH-May_202404281910.csv
+archive/state/ContractData-SH-May_202404282226.csv
+archive/state/ContractData-SH-May_202404291229.csv
+state/ContractData-SHANGHAI.csv
+state/PerformanceData-SH-May.csv
+state/send_status_sh_may.json
+archive/state/ContractData-BJ-May_202405011040.csv
+archive/state/ContractData-BJ-May_202405011044.csv
+archive/state/ContractData-BJ-May_202405012001.csv
+archive/state/ContractData-BJ-May_202405020841.csv
+archive/state/ContractData-BJ-May_202405020900.csv
+archive/state/ContractData-SH-May_202405020846.csv
+archive/state/ContractData-SH-May_202405020854.csv
+tests/__pycache__/test_data_processing_module.cpython-311.pyc
+tests/__pycache__/test_file_utils.cpython-311.pyc
+metabase_session.json
