August Campaign beta.

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,87 @@ archive/state/ContractData-SH-May_202405020854.csv
 tests/__pycache__/test_data_processing_module.cpython-311.pyc
 tests/__pycache__/test_file_utils.cpython-311.pyc
 metabase_session.json
+archive/state/ContractData-SH-July_202407051342.csv
+archive/state/ContractData-SH-July_202407081827.csv
+state/ContractData-SH-July.csv
+state/ContractData-SH-June.csv
+state/PerformanceData-SH-July.csv
+state/PerformanceData-SH-June.csv
+state/send_status_sh_july.json
+__pycache__/jobs.cpython-39.pyc
+archive/state/ContractData-SH-July_202407221003.csv
+archive/state/ContractData-SH-July_202407221025.csv
+archive/state/ContractData-SH-July_202407221031.csv
+archive/state/ContractData-SH-July_202407221042.csv
+archive/state/ContractData-SH-July_202407221046.csv
+archive/state/ContractData-SH-July_202407221051.csv
+archive/state/ContractData-SH-July_202407221052.csv
+state/PerformanceData-SH-July-bak.csv
+state/template - check.xlsx
+state/template.xlsx
+weekly_reports/nan.png
+weekly_reports/weekly_reports_v2.1.zip
+weekly_reports/weekly_reports_v2.zip
+weekly_reports/weekly_reports.zip
+weekly_reports/上海云风防水工程有限公司.png
+weekly_reports/上海位卫防水工程有限公司.png
+weekly_reports/上海哲佑防水工程有限公司.png
+weekly_reports/上海国坦装潢设计工程有限公司.png
+weekly_reports/上海妙才建筑防水工程有限公司.png
+weekly_reports/上海翊增建筑工程有限公司 .png
+weekly_reports/上海英森防水工程有限公司.png
+weekly_reports/上海荃璆实业有限公司  .png
+weekly_reports/上海锐常实业有限公司.png
+weekly_reports/上海雁棠建筑工程有限公司.png
+weekly_reports/云尚虹（北京）建筑工程有限公司.png
+weekly_reports/北京中昊允诚商贸有限公司.png
+weekly_reports/北京中科宏业建设有限公司河北第二分公司.png
+weekly_reports/北京久安有方建筑工程有限公司.png
+weekly_reports/北京京建智成防水保温工程有限公司.png
+weekly_reports/北京京湘防水工程有限公司.png
+weekly_reports/北京众德森建材有限责任公司.png
+weekly_reports/北京华夏精程防水工程有限公司.png
+weekly_reports/北京华庭装饰工程有限公司.png
+weekly_reports/北京博远恒泰装饰装修有限公司.png
+weekly_reports/北京天诺允诚科技发展有限公司.png
+weekly_reports/北京建君盛华技术服务有限公司.png
+weekly_reports/北京德客声商贸有限公司.png
+weekly_reports/北京怀军防水工程有限公司.png
+weekly_reports/北京恒兴佳业商贸有限公司.png
+weekly_reports/北京恒润万通防水工程有限公司.png
+weekly_reports/北京朝悦宏达商贸有限公司.png
+weekly_reports/北京汇腾建筑工程有限公司.png
+weekly_reports/北京盛达洪雨防水技术有限公司.png
+weekly_reports/北京腾飞瑞欧建筑装饰有限公司.png
+weekly_reports/北京鑫焱创远防水工程有限公司.png
+modules/__pycache__/config.cpython-39.pyc
+modules/__pycache__/data_processing_module.cpython-39.pyc
+modules/__pycache__/file_utils.cpython-39.pyc
+modules/__pycache__/log_config.cpython-39.pyc
+modules/__pycache__/request_module.cpython-39.pyc
+modules/__pycache__/config.cpython-37.pyc
+modules/__pycache__/data_processing_module.cpython-37.pyc
+modules/__pycache__/file_utils.cpython-37.pyc
+modules/__pycache__/log_config.cpython-37.pyc
+modules/__pycache__/notification_module.cpython-37.pyc
+modules/__pycache__/request_module.cpython-37.pyc
+v2-temp/jobs.py
+v2-temp/main.py
+v2-temp/modules/config.py
+v2-temp/modules/data_processing_module.py
+v2-temp/modules/file_utils.py
+v2-temp/modules/log_config.py
+v2-temp/modules/notification_module.py
+v2-temp/modules/request_module.py
+v2-temp/modules/__pycache__/config.cpython-39.pyc
+v2-temp/modules/__pycache__/config.cpython-311.pyc
+v2-temp/modules/__pycache__/data_processing_module.cpython-39.pyc
+v2-temp/modules/__pycache__/data_processing_module.cpython-311.pyc
+v2-temp/modules/__pycache__/file_utils.cpython-39.pyc
+v2-temp/modules/__pycache__/file_utils.cpython-311.pyc
+v2-temp/modules/__pycache__/log_config.cpython-39.pyc
+v2-temp/modules/__pycache__/log_config.cpython-311.pyc
+v2-temp/modules/__pycache__/notification_module.cpython-311.pyc
+v2-temp/modules/__pycache__/request_module.cpython-39.pyc
+v2-temp/modules/__pycache__/request_module.cpython-311.pyc
+state/template.xls
