--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,26 @@ v2-temp/modules/__pycache__/notification_module.cpython-311.pyc
 v2-temp/modules/__pycache__/request_module.cpython-39.pyc
 v2-temp/modules/__pycache__/request_module.cpython-311.pyc
 state/template.xls
+archive/state/ContractData-BJ-Aug_202408261455.csv
+archive/state/ContractData-BJ-Aug_202408261530.csv
+archive/state/ContractData-BJ-Aug_202408261705.csv
+archive/state/ContractData-BJ-Aug_202408261724.csv
+archive/state/ContractData-BJ-Aug_202408261729.csv
+state/PerformanceData-SH-Aug.csv
+state/send_status_bj_aug.json
+state/send_status_sh_aug.json
+__pycache__/jobs.cpython-312.pyc
+archive/state/ContractData-BJ-Aug_202408311228.csv
+archive/state/ContractData-BJ-Aug_202408311235.csv
+archive/state/ContractData-BJ-Aug_202408311237.csv
+archive/state/ContractData-BJ-Aug_202408311341.csv
+modules/__pycache__/config.cpython-312.pyc
+modules/__pycache__/data_processing_module.cpython-312.pyc
+modules/__pycache__/file_utils.cpython-312.pyc
+modules/__pycache__/log_config.cpython-312.pyc
+modules/__pycache__/notification_module.cpython-312.pyc
+modules/__pycache__/request_module.cpython-312.pyc
+state/PerformanceData-BJ-Aug.csv
+streamlit_app/__pycache__/dashboard.cpython-312.pyc
+运营商周报程序0802.zip
+pyautogui-0830.zip
