--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,60 @@ state/PerformanceData-BJ-Aug.csv
 streamlit_app/__pycache__/dashboard.cpython-312.pyc
 运营商周报程序0802.zip
 pyautogui-0830.zip
+state/PerformanceData-BJ-Nov.csv
+state/PerformanceData-BJ-Sep.csv
+state/PerformanceData-SH-Nov.csv
+state/PerformanceData-SH-Oct.csv
+state/PerformanceData-SH-Sep.csv
+state/send_status_bj_sep.json
+state/send_status_sh_sep.json
+archive/state/ContractData-BJ-Nov_202410311125.csv
+archive/state/ContractData-SH-Nov_202410311125.csv
+modules/__pycache__/__init__.cpython-312.pyc
+state/daily_service_report_record.json
+tests/__pycache__/test_data_processing_module.cpython-312.pyc
+tests/__pycache__/test_file_utils.cpython-312.pyc
+archive/state/ContractData-SH-Nov_202411011439.csv
+__pycache__/jobs.cpython-37.pyc
+archive/state/ContractData-BJ-Nov_202411131341.csv
+archive/state/ContractData-SH-Nov_202411131347.csv
+state/daily_service_report_record.csv
+archive/state/ContractData-SH-Nov_202411131839.csv
+archive/state/ContractData-SH-Nov_202411131850.csv
+archive/state/ContractData-SH-Nov_202411131852.csv
+archive/state/ContractData-SH-Nov_202411131902.csv
+archive/state/ContractData-SH-Nov_202411131904.csv
+archive/state/ContractData-SH-Nov_202411131907.csv
+archive/state/ContractData-BJ-Nov_202411181029.csv
+archive/state/ContractData-BJ-Nov_202411191437.csv
+archive/state/ContractData-BJ-Nov_202411191445.csv
+archive/state/ContractData-BJ-Nov_202411191446.csv
+archive/state/ContractData-BJ-Nov_202411191452.csv
+archive/state/ContractData-BJ-Nov_202411191454.csv
+archive/state/ContractData-BJ-Nov_202411191458.csv
+archive/state/ContractData-BJ-Nov_202411191500.csv
+modules/__pycache__/service_provider_sla_monitor.cpython-312.pyc
+modules/__pycache__/timeout_notification.cpython-312.pyc
+state/send_status_bj_nov.json
+state/send_status_sh_nov.json
+state/sla_violations.json
+archive/state/ContractData-SH-Dec_202412311026.csv
+archive/state/ContractData-SH-Dec_202412311030.csv
+archive/state/ContractData-SH-Dec_202412311034.csv
+archive/state/ContractData-SH-Dec_202412311038.csv
+archive/state/ContractData-SH-Dec_202412311041.csv
+archive/state/ContractData-SH-Dec_202412311042.csv
+archive/state/ContractData-SH-Dec_202412311045.csv
+archive/state/ContractData-SH-Dec_202412311046.csv
+archive/state/ContractData-SH-Dec_202412311049.csv
+archive/state/ContractData-SH-Dec_202412311053.csv
+archive/state/ContractData-SH-Dec_202412311057.csv
+archive/state/ContractData-SH-Dec_202412311618.csv
+archive/state/ContractData-SH-Dec_202412311745.csv
+archive/state/ContractData-SH-Dec_202412311746.csv
+state/PerformanceData-SH-Dec.csv
+state/send_status_sh_dec.json
+__pycache__/task_manager.cpython-312.pyc
+__pycache__/task_model.cpython-312.pyc
+__pycache__/task_operations.cpython-312.pyc
+__pycache__/task_scheduler.cpython-312.pyc
