更新项目文档规范和相关文档，添加团队成员信息

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,22 @@ state/send_status_sh_apr.json
 state/PerformanceData-BJ-Apr.csv
 state/PerformanceData-SH-Apr.csv
 state/send_status_bj_apr.json
+tests/__pycache__/__init__.cpython-312.pyc
+.gitignore
+tests/__pycache__/test_rewards_generic.cpython-312.pyc
+tests/__pycache__/test_rewards.cpython-312.pyc
+tests/__pycache__/test_apr_beijing_real_data.cpython-312.pyc
+tests/__pycache__/test_apr_beijing_rewards.cpython-312.pyc
+tests/__pycache__/test_compare_rewards.cpython-312.pyc
+archive/state/ContractData-BJ-Apr_202504281344.csv
+archive/state/ContractData-BJ-Apr_202504281349.csv
+archive/state/ContractData-BJ-May_202504281850.csv
+archive/state/ContractData-SH-May_202504291031.csv
+logs/app.log.2
+archive/state/ContractData-SH-Apr_202504291553.csv
+.trae/rules/project_rules.md
+.gitignore
+.gitignore
+tasks.db
+.gitignore
+tasks.db
