更新 .gitignore 文件，确保环境变量文件不会被提交

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ wheels/
 
 # Environment variables
 .env
+.env.test
+.env.*
 .venv
 env/
 venv/
@@ -76,5 +78,6 @@ v2-temp/
 *.xlsx
 *.png
 
-# Make sure .env.example is not ignored
+# Make sure template and example files are not ignored
 !.env.example
+!.env.template
