--- a/.env
+++ b/.env
@@ -1,2 +1,115 @@
-# 环境配置
+# 开发环境配置
+# 注意：此文件包含敏感信息，不应提交到版本控制系统
+
+# 环境设置
 ENVIRONMENT=development
+
+# ===== 认证凭据 =====
+# Metabase认证
+METABASE_USERNAME=wangshuang@xlink.bj.cn
+METABASE_PASSWORD=xlink123456
+
+# 会话加密
+SECURITY_SESSION_KEY=dev_session_key_2025
+
+# ===== API端点 =====
+# Metabase API
+METABASE_URL=http://metabase.fsgo365.cn:3000
+
+# 技师状态检查
+API_URL_TS=http://metabase.fsgo365.cn:3000/api/card/719/query
+
+# 工单联络超时提醒
+API_URL_CONTACT_TIMEOUT=http://metabase.fsgo365.cn:3000/api/card/980/query
+
+# 上海活动API
+API_URL_SH_2025_04=http://metabase.fsgo365.cn:3000/api/card/1617/query
+API_URL_SH_2025_05=http://metabase.fsgo365.cn:3000/api/card/1694/query
+
+# 北京活动API
+API_URL_BJ_2025_04=http://metabase.fsgo365.cn:3000/api/card/1616/query
+API_URL_BJ_2025_05=http://metabase.fsgo365.cn:3000/api/card/1693/query
+
+# 每日服务报告
+API_URL_DAILY_SERVICE_REPORT=http://metabase.fsgo365.cn:3000/api/card/1514/query
+
+# ===== Webhook URLs =====
+# 企业微信Webhook
+WECOM_WEBHOOK_DEFAULT=https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=689cebff-3328-4150-9741-fed8b8ce4713
+WECOM_WEBHOOK_CONTACT_TIMEOUT=https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=80ab1f45-2526-4b41-a639-c580ccde3e2f
+
+# ===== 文件路径 =====
+# 上海活动文件
+FILE_TEMP_CONTRACT_DATA_SH_2025_04=state/ContractData-SH-Apr.csv
+FILE_PERFORMANCE_DATA_SH_2025_04=state/PerformanceData-SH-Apr.csv
+FILE_STATUS_SH_2025_04=state/send_status_sh_apr.json
+FILE_TEMP_CONTRACT_DATA_SH_2025_05=state/ContractData-SH-May.csv
+FILE_PERFORMANCE_DATA_SH_2025_05=state/PerformanceData-SH-May.csv
+FILE_STATUS_SH_2025_05=state/send_status_sh_may.json
+
+# 北京活动文件
+FILE_TEMP_CONTRACT_DATA_BJ_2025_04=state/ContractData-BJ-Apr.csv
+FILE_PERFORMANCE_DATA_BJ_2025_04=state/PerformanceData-BJ-Apr.csv
+FILE_STATUS_BJ_2025_04=state/send_status_bj_apr.json
+FILE_TEMP_CONTRACT_DATA_BJ_2025_05=state/ContractData-BJ-May.csv
+FILE_PERFORMANCE_DATA_BJ_2025_05=state/PerformanceData-BJ-May.csv
+FILE_STATUS_BJ_2025_05=state/send_status_bj_may.json
+
+# 服务报告文件
+FILE_TEMP_DAILY_SERVICE_REPORT=state/daily_service_report_record.csv
+FILE_DAILY_SERVICE_REPORT_RECORD=state/daily_service_report_record.json
+FILE_SLA_VIOLATIONS_RECORDS=./state/sla_violations.json
+
+# 会话文件
+FILE_SESSION=metabase_session.json
+
+# ===== 联系人信息 =====
+# 联系电话
+CONTACT_PHONE_NUMBER=15327103039
+
+# 上海活动联系人
+CONTACT_WECOM_GROUP_NAME_SH_2025_04=frank
+CONTACT_CAMPAIGN_CONTACT_SH_2025_04=文件传输助手
+CONTACT_WECOM_GROUP_NAME_SH_2025_05=frank
+CONTACT_CAMPAIGN_CONTACT_SH_2025_05=文件传输助手
+
+# 北京活动联系人
+CONTACT_WECOM_GROUP_NAME_BJ_2025_04=frank
+CONTACT_CAMPAIGN_CONTACT_BJ_2025_04=文件传输助手
+CONTACT_WECOM_GROUP_NAME_BJ_2025_05=frank
+CONTACT_CAMPAIGN_CONTACT_BJ_2025_05=文件传输助手
+
+# ===== 配置项 =====
+# 任务调度
+CONFIG_TASK_CHECK_INTERVAL=10
+CONFIG_RUN_JOBS_SERIALLY_SCHEDULE=3
+# 14天，单位：秒
+CONFIG_SESSION_DURATION=1209600
+
+# 奖金池计算
+CONFIG_BONUS_POOL_RATIO=0.002
+CONFIG_BONUS_POOL_RATIO_BJ_2025_02=0.002
+
+# 业绩金额上限
+CONFIG_PERFORMANCE_AMOUNT_CAP=40000
+CONFIG_ENABLE_PERFORMANCE_AMOUNT_CAP=false
+CONFIG_PERFORMANCE_AMOUNT_CAP_BJ_2025_02=100000
+CONFIG_ENABLE_PERFORMANCE_AMOUNT_CAP_BJ_2025_02=true
+CONFIG_SINGLE_PROJECT_CONTRACT_AMOUNT_LIMIT_BJ_2025_02=1000000
+
+# 上海5月活动配置
+CONFIG_PERFORMANCE_AMOUNT_CAP_SH_2025_05=80000
+CONFIG_ENABLE_PERFORMANCE_AMOUNT_CAP_SH_2025_05=true
+CONFIG_SINGLE_PROJECT_CONTRACT_AMOUNT_LIMIT_SH_2025_05=800000
+
+# 北京5月活动配置
+CONFIG_PERFORMANCE_AMOUNT_CAP_BJ_2025_05=100000
+CONFIG_ENABLE_PERFORMANCE_AMOUNT_CAP_BJ_2025_05=true
+CONFIG_SINGLE_PROJECT_CONTRACT_AMOUNT_LIMIT_BJ_2025_05=1000000
+
+# ===== 功能标志 =====
+# 徽章功能
+FEATURE_ENABLE_BADGE_MANAGEMENT=true
+
+# SLA监控
+FEATURE_SLA_FORCE_MONDAY=false
